# ruisheng-scada

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
alembic/: env.py
deploy/: .env.prod.example  docker-compose.prod.yml  export-images.sh  setup-customer.md
docs/: ARCHITECTURE.md  RELEASE.md  系统架构说明.md
ruisheng-api/: Dockerfile  pyproject.toml
ruisheng-api/src/ruisheng_api/: __init__.py  __main__.py  config.py  deps.py  logging_setup.py  main.py
ruisheng-api/src/ruisheng_api/api/: __init__.py  admin.py  alarms.py  auth.py  control.py  devices.py  health.py  orgs.py  pay.py  plans.py  points.py  reports.py  scenes.py  templates.py  waveforms.py  ws.py
ruisheng-api/src/ruisheng_api/api/schemas/: alarms.py  auth.py  control.py  devices.py  orgs.py  pay.py  plans.py  points.py  reports.py  scenes.py  templates.py
ruisheng-api/src/ruisheng_api/core/: __init__.py  errors.py  login_limit.py  rbac.py  response.py  security.py  tenant.py  token_blacklist.py
ruisheng-api/src/ruisheng_api/db/: __init__.py  base.py
ruisheng-api/src/ruisheng_api/db/repositories/: alarms.py  control.py  devices.py  pay.py  plans.py  points.py  scenes.py  timeseries.py  users.py
ruisheng-api/src/ruisheng_api/pubsub/: alarm_consumer.py  publisher.py  realtime_bridge.py  ws_manager.py
ruisheng-api/src/ruisheng_api/services/: otp.py  wechat_pay.py
ruisheng-api/src/ruisheng_api/services/analytics/: fft.py
ruisheng-api/src/ruisheng_api/services/notification/: base.py  email.py  fanout.py  registry.py  sms.py  voice.py  wechat.py
ruisheng-api/src/ruisheng_api/services/reports/: aggregator.py  excel_export.py
ruisheng-api/src/ruisheng_api/tasks/: pay_expire.py  pay_seen_cleanup.py  scheduler.py  token_refresh.py  vacuum_hot.py
ruisheng-api/tests/integration/: conftest.py
ruisheng-api/tests/unit/: test_config.py  test_deps.py  test_logging_setup.py  test_main.py  test_smoke.py
ruisheng-api/tests/unit/api/: test_admin.py  test_alarm_configs.py  test_auth_login.py  test_auth_refresh_logout.py  test_auth_register.py  test_control.py  test_control_query.py  test_device_templates.py  test_devices_list.py  test_devices_realtime_history.py  test_orgs.py  test_orgs_contacts.py  test_pay_create_order.py  test_pay_notify.py  test_plans_maintenance.py  test_plans_timing.py  test_points.py  test_scenes.py  test_ws.py
ruisheng-api/tests/unit/core/: test_errors.py  test_login_limit.py  test_rbac.py  test_security.py  test_tenant.py
ruisheng-api/tests/unit/db/: test_base.py
ruisheng-api/tests/unit/pubsub/: test_alarm_consumer.py  test_publisher.py  test_realtime_bridge.py  test_ws_manager.py
ruisheng-api/tests/unit/services/: test_fft.py  test_otp.py  test_reports.py  test_wechat_pay_sign.py
ruisheng-api/tests/unit/services/notification/: test_base.py  test_email.py  test_fanout.py  test_registry.py  test_wechat.py
ruisheng-api/tests/unit/tasks/: test_pay_jobs.py  test_scheduler.py  test_vacuum.py
ruisheng-gw/: .env.example  CHANGELOG.md  Dockerfile  pyproject.toml
ruisheng-gw/docs/: PLAN-1-ROLLBACK-RUNBOOK.md  gw-logs.md  gw-metrics.md
ruisheng-gw/src/ruisheng_gw/: __init__.py  __main__.py  config.py  health.py  ingest.py  logging_setup.py  main.py
ruisheng-gw/src/ruisheng_gw/ci_lint/: tenant_filter_lint.py
ruisheng-gw/src/ruisheng_gw/domain/: alarm_simple.py  device.py  point.py  registry.py
ruisheng-gw/src/ruisheng_gw/persistence/: batch_writer.py  repository.py  wal.py
ruisheng-gw/src/ruisheng_gw/protocol/: exceptions.py  framer.py  frames.py  modbus_codec.py  private_codes.py
ruisheng-gw/src/ruisheng_gw/pubsub/: publisher.py  schemas.py
ruisheng-gw/src/ruisheng_gw/scheduler/: bus_lock.py  clock.py  poller.py  supervisor.py
ruisheng-gw/src/ruisheng_gw/transport/: connection.py  serial_bus.py  session.py  tcp_server.py
ruisheng-gw/tests/integration/: conftest.py  test_end_to_end_polling.py  test_p95_flush.py  test_redis_contract.py  test_repository.py  test_wal_replay.py
ruisheng-gw/tests/property/: conftest.py  test_modbus_property.py
ruisheng-gw/tests/replay/: pcap_reader.py  test_replay_corpus.py
ruisheng-gw/tests/unit/: test_alarm_simple.py  test_batch_writer.py  test_bus_lock.py  test_clock.py  test_config.py  test_connection.py  test_device.py  test_framer.py  test_framer_register.py  test_frames_exception_heartbeat.py  test_frames_fc3.py  test_frames_write.py  test_health.py  test_heartbeat_timeout.py  test_ingest.py  test_logging_setup.py  test_modbus_codec.py  test_point.py  test_poller.py  test_private_codes.py  test_publisher.py  test_pubsub_schemas.py  test_registry.py  test_serial_bus.py  test_session.py  test_startup_checks.py  test_supervisor.py  test_tcp_server.py  test_tenant_filter_lint.py  test_wal.py
ruisheng-shared/: CHANGELOG.md  README.md  pyproject.toml
ruisheng-shared/src/ruisheng_shared/: CHANGELOG.md  __init__.py
ruisheng-shared/src/ruisheng_shared/constants/: __init__.py  limits.py  protocol.py
ruisheng-shared/src/ruisheng_shared/enums/: __init__.py  alarm_action.py  alarm_type.py  authority.py  control_status.py  fun_code.py
ruisheng-shared/src/ruisheng_shared/errors/: __init__.py  codes.py
ruisheng-shared/src/ruisheng_shared/models/: __init__.py  alarms.py  base.py  control.py  devices.py  logs.py  pay.py  plans.py  scenes.py  tenants.py  timeseries.py  users.py
ruisheng-shared/src/ruisheng_shared/schemas/: __init__.py  common.py
ruisheng-shared/src/ruisheng_shared/validators/: __init__.py  rs485.py
ruisheng-web/: .env.example  .gitignore  .lighthouserc.json  CHANGELOG.md  Dockerfile  README.md  env.d.ts  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  (+1 more)
tools/pcap_gen/: pyproject.toml
tools/pcap_gen/scripts/: gen_initial_corpus.py
tools/pcap_gen/src/pcap_gen/: __init__.py  cli.py  modbus_frames.py  scenarios.py
(+174 files in other folders)
