[project]
name = "ruisheng-iot"
version = "0.1.0"
description = "江苏润盛 IoT SCADA 平台重做 monorepo"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "Proprietary" }

[tool.uv.workspace]
members = ["ruisheng-shared", "tools/pcap_gen"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-rerunfailures>=14.0",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.11",
  "pre-commit>=3.7",
  "testcontainers[postgres,redis]>=4.7",
  "taskipy>=1.13",
  "fakeredis>=2.23",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ASYNC", "PL"]
ignore = ["E501", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/.*", "alembic/.*"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: 需要 PG/Redis 的集成测试",
  "slow: 超过 5s 的慢测",
]

[tool.coverage.run]
source = ["ruisheng-shared/src", "tools/pcap_gen/src"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
fail_under = 90

[tool.taskipy.tasks]
lint = "ruff check . && mypy ."
fmt = "ruff format ."
test = "pytest -x"
cov = "pytest --cov --cov-report=term-missing"
