[project]
name = "ruisheng-iot"
version = "0.1.0"
description = "江苏润盛 IoT SCADA 平台重做 monorepo"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "Proprietary" }

[tool.uv.workspace]
members = ["ruisheng-shared", "tools/pcap_gen", "ruisheng-gw"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-rerunfailures>=14.0",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.11",
  "pydantic>=2.7",
  "pre-commit>=3.7",
  "testcontainers[postgres,redis]>=4.7",
  # "asyncpg>=0.29",  # G6: retry transitive via testcontainers[postgres]
  "taskipy>=1.13",
  "fakeredis>=2.23",
  "alembic>=1.13",
  "pytest-benchmark>=5.2.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ASYNC", "PL"]
ignore = ["E501", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "PLC0415"]
"ruisheng-gw/tests/**/*.py" = ["PLR2004", "PLC0415"]
# Alembic autogenerate creates large upgrade/downgrade() funcs; don't fight it.
"alembic/versions/**/*.py" = ["PLR0915", "E501", "PLC0415"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/.*", "ruisheng-gw/tests/.*", "alembic/.*"]
mypy_path = "ruisheng-shared/src:ruisheng-gw/src:tools/pcap_gen/src"

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests", "ruisheng-gw/tests/unit", "ruisheng-gw/tests/property", "ruisheng-gw/tests/integration"]
pythonpath = [".", "ruisheng-shared/src", "tools/pcap_gen/src", "ruisheng-gw/src"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: 需要 PG/Redis 的集成测试",
  "slow: 超过 5s 的慢测",
]

[tool.coverage.run]
branch = true
source = ["ruisheng-shared/src", "ruisheng-gw/src"]
omit = [
  "ruisheng-gw/src/ruisheng_gw/__main__.py",
  "ruisheng-gw/src/ruisheng_gw/main.py",
  "ruisheng-gw/src/ruisheng_gw/persistence/repository.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
fail_under = 85
precision = 2
show_missing = true

[tool.taskipy.tasks]
lint = "ruff check . && mypy ."
fmt = "ruff format ."
test = "pytest -x"
cov = "pytest --cov --cov-report=term-missing"
up = "docker compose -f docker-compose.dev.yml up -d"
down = "docker compose -f docker-compose.dev.yml down"
logs = "docker compose -f docker-compose.dev.yml logs -f"
db = "docker exec -it ruisheng-postgres-dev psql -U ruisheng_dev -d ruisheng"
redis = "docker exec -it ruisheng-redis-dev redis-cli -a dev-redis-pw"
migrate = "alembic upgrade head"
downgrade = "alembic downgrade -1"
seed = "python tools/run_seeds.py"
bootstrap = "uv sync --all-packages && uv run pre-commit install && uv run task up && uv run task test"
