[project]
name = "ruisheng-api"
version = "0.1.0"
description = "江苏润盛 IoT SCADA Web API 服务"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
dependencies = [
  "ruisheng-shared",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "redis[hiredis]>=5.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "loguru>=0.7",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-ulid>=2.0",
  "slowapi>=0.1.9",
  "apscheduler>=3.10",
  "openpyxl>=3.1",
  "aiohttp>=3.9",
  "httpx>=0.27",
  "numpy>=1.26",
  "python-multipart>=0.0.9",
]

[tool.uv.sources]
ruisheng-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ruisheng_api"]
