[project]
name = "ruisheng-gw"
version = "0.1.2"
description = "江苏润盛 IoT SCADA 设备采集网关"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
dependencies = [
  "ruisheng-shared",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "redis>=5.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.1",
  "aiohttp>=3.9",
]

[tool.uv.sources]
ruisheng-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ruisheng_gw"]

[project.optional-dependencies]
serial = ["pyserial-asyncio>=0.6"]
