[project]
name = "ruisheng-shared"
version = "0.1.0"
description = "润盛 IoT 共享模型/枚举/错误码/常量"
requires-python = ">=3.11,<3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-ulid>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ruisheng_shared"]
