[project]
name = "pcap-gen"
version = "0.1.0"
description = "润盛 IoT 伪设备 PCAP 生成器"
requires-python = ">=3.11"
dependencies = [
  "scapy>=2.5",
  "typer>=0.12",
  "ruisheng-shared",
]

[project.scripts]
pcap-gen = "pcap_gen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcap_gen"]

[tool.uv.sources]
ruisheng-shared = { workspace = true }
